<?xml version="1.0"?>
<package format="3">
  <name>cmd_vel_to_serial</name>
  <version>0.0.1</version>
  <description>Subscribe to /cmd_vel and send data to port</description>

  <maintainer email="erlanggarizqidwi@gmail.com">erzy</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>interfaces</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

